# cmake-project-template

./: .gitignore  Build.bat  CMakeLists.txt  README
cmake/: Helpers.cmake
include/Demo/: demo.h
modules/: CMakeLists.txt
modules/Chinese/: CMakeLists.txt
modules/Chinese/include/Chinese/: write.h
modules/Chinese/src/: write.cpp
modules/English/: .clang-format  CMakeLists.txt
modules/English/include/English/: speak.h
modules/English/src/: speak.cpp
src/: CMakeLists.txt  main.cpp  main_gui.cpp
vendors/: CMakeLists.txt
